--- a/myart.html
+++ b/myart.html
@@ -64,7 +64,7 @@
 	<meta name="msapplication-TileColor" content="#FFFFFF">
 	<meta name="msapplication-TileImage" content="/icons/favicon-144.png">
 	<meta name="msapplication-config" content="/icons/browserconfig.xml">
-
+	<meta name="google-site-verification" content="I0oV_8NeUwcaO88XZoLZGnxrNrVMyGMD4W3ToTqNfrg" />
 </head>
 
 <body class="page-home ac-nav-overlap theme-dark ac-theme-dark">
